# robstride_sandbox

./: Cargo.toml  README.md
doc/: control_spec.md
examples/: position_control.rs  status.rs  torque_control.rs  velocity_control.rs
scripts/: probe_adapter.py  setup.sh  setup_5mbps.sh  setup_can.sh  setup_can_5mbps.sh  stop_can.sh  test.sh
src/: bilateral.rs  can_lock.rs  driver.rs  error.rs  lib.rs  main.rs  motor.rs  protocol.rs  serial_can.rs  transport.rs  tui_main.rs
